--- a/src/Magnum/CMakeLists.txt
+++ b/src/Magnum/CMakeLists.txt
@@ -31,6 +31,7 @@ set(Magnum_SRCS
     Mesh.cpp
     PixelStorage.cpp
     Resource.cpp
+    Sampler.cpp
     Timeline.cpp)
 
 set(Magnum_GracefulAssert_SRCS
@@ -51,6 +52,7 @@ set(Magnum_HEADERS
     Resource.h
     ResourceManager.h
     ResourceManager.hpp
+    Sampler.h
     Timeline.h
     Types.h
     visibility.h)
@@ -74,7 +76,6 @@ if(WITH_GL AND BUILD_DEPRECATED)
         Renderbuffer.h
         RenderbufferFormat.h
         Renderer.h
-        Sampler.h
         Shader.h
         Tags.h
         Texture.h
